[package]
name = "mini"
version = "5.6.0"
edition = "2024"

[dependencies]
termion = "4.0.5"
polling = "3.11.0"
arboard = "3.6.1"
regex = "1.11.3"

# Syntax Highlighting.
tree-sitter-highlight = { version = "0.25.10", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
# This fork fixes the outdated language function.
tree-sitter-toml = { git = "https://github.com/scvalex/tree-sitter-toml", rev = "d984695297102152aad60d238a80287b553e23eb", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-lua = { git = "https://github.com/tree-sitter-grammars/tree-sitter-lua", tag = "v0.4.0", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }
tree-sitter-odin = { version = "1.3.0", optional = true }

[features]
syntax-highlighting = ["dep:tree-sitter-highlight", "dep:tree-sitter-rust", "dep:tree-sitter-toml", "dep:tree-sitter-python", "dep:tree-sitter-typescript", "dep:tree-sitter-cpp", "dep:tree-sitter-javascript", "dep:tree-sitter-go", "dep:tree-sitter-c", "dep:tree-sitter-java", "dep:tree-sitter-html", "dep:tree-sitter-json", "dep:tree-sitter-css", "dep:tree-sitter-lua", "dep:tree-sitter-yaml", "dep:tree-sitter-zig", "dep:tree-sitter-odin"]

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"
