[package]
name = "mini"
version = "6.1.0"
edition = "2024"

[dependencies]
termion = "4.0.5"
polling = "3.11.0"
arboard = "3.6.1"
regex = "1.11.3"

# Syntax Highlighting.
tree-sitter-highlight = "0.25.10"
tree-sitter-rust = "0.24.0"
# This fork fixes the outdated language function.
tree-sitter-toml = { git = "https://github.com/scvalex/tree-sitter-toml", rev = "d984695297102152aad60d238a80287b553e23eb" }
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-java = "0.23.5"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-css = "0.25.0"
# The repo is more up-to-date.
tree-sitter-lua = { git = "https://github.com/tree-sitter-grammars/tree-sitter-lua", tag = "v0.4.0" }
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"
tree-sitter-odin = "1.3.0"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"
