[package]
name = "mini"
version = "7.6.0-rev1"
edition = "2024"

[dependencies]
termion = "4.0.5"
polling = "3.11.0"
# Disable image compatability since Mini can't process image data.
arboard = { version = "3.6.1", default-features = false }
regex = "1.11.3"
ropey = "1.6.1"
portable-pty = "0.9.0"
vt100 = "0.16.2"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"
